@@ -896,7 +896,7 @@ static GtkWidget *widget_tree_create_tree_view(AttributeSet *Attr,
 	gchar             *value;
 	gint               index;
 	gint               function;
-	list_t            *column_width = NULL;
+	list_t            *column_sizing = NULL;
 	list_t            *column_resizeable = NULL;
 	list_t            *column_header_active = NULL;
 	list_t            *column_visible = NULL;
@@ -911,9 +911,9 @@ static GtkWidget *widget_tree_create_tree_view(AttributeSet *Attr,
 	columns = linecutter(headline, '|');
 
 	if (attr) {
-		/* Get column-width (custom) */
-		if ((value = get_tag_attribute(attr, "column-width")))
-			column_width = linecutter(g_strdup(value), '|');
+		/* Get column-sizing (custom) */
+		if ((value = get_tag_attribute(attr, "column-sizing")))
+			column_sizing = linecutter(g_strdup(value), '|');
 		/* Get column-resizeable (custom) */
 		if ((value = get_tag_attribute(attr, "column-resizeable")))
 			column_resizeable = linecutter(g_strdup(value), '|');
@@ -969,16 +969,16 @@ static GtkWidget *widget_tree_create_tree_view(AttributeSet *Attr,
 			gtk_tree_view_column_add_attribute(column, renderer, "text",
 				index + FirstDataColumn);
 		}
-		/* Fixed-width column? */
-		if (column_width && index < column_width->n_lines) {
-			if (atoi(column_width->line[index]) == GTK_TREE_VIEW_COLUMN_GROW_ONLY) {
-				/* Ignore it */
-			} else if (atoi(column_width->line[index]) == GTK_TREE_VIEW_COLUMN_AUTOSIZE) {
+		/* Resize mode? (the default is to grow) */
+		if (column_sizing && index < column_sizing->n_lines) {
+			if (atoi(column_sizing->line[index]) == GTK_TREE_VIEW_COLUMN_GROW_ONLY) {
+				gtk_tree_view_column_set_sizing(column, GTK_TREE_VIEW_COLUMN_GROW_ONLY);
+			} else if (atoi(column_sizing->line[index]) == GTK_TREE_VIEW_COLUMN_AUTOSIZE) {
 				gtk_tree_view_column_set_sizing(column, GTK_TREE_VIEW_COLUMN_AUTOSIZE);
 			} else {
 				gtk_tree_view_column_set_sizing(column, GTK_TREE_VIEW_COLUMN_FIXED);
 				gtk_tree_view_column_set_fixed_width(column,
-					atoi(column_width->line[index]));
+					atoi(column_sizing->line[index]));
 			}
 		}
 		/* Resizeable column? (gtkdialog's default is resizeable) */
@@ -1030,7 +1030,7 @@ sorting is compatible only with columns of type string.\n", __func__);
 	}
 
 	/* Free linecutter memory */
-	if (column_width) list_t_free(column_width);
+	if (column_sizing) list_t_free(column_sizing);
 	if (column_resizeable) list_t_free(column_resizeable);
 	if (column_header_active) list_t_free(column_header_active);
 	if (column_visible) list_t_free(column_visible);
